fixed background hover color on signup button

--- a/assets/css/templatemo-training-studio.css
+++ b/assets/css/templatemo-training-studio.css
@@ -324,7 +324,7 @@ header
 }
 
 .header-area .main-nav .nav li:last-child a:hover {
-  background-color: #a6ed45;
+  background-color: #e0fef1;
   opacity: 1;
 }
 
