fixed hover of signup button

--- a/assets/css/templatemo-training-studio.css
+++ b/assets/css/templatemo-training-studio.css
@@ -330,7 +330,7 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #a6ed45!important;
+  color: #003023!important;
   opacity: 1;
 }
 
